--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ aws_c_auth_jll = "2b3700d1-4306-52e2-a478-c162f0c514be"
 Aqua = "0.7"
 CEnum = "0.5"
 LibAwsCal = "=1.0.0"
-LibAwsCommon = "=1.0.0"
+LibAwsCommon = "=1.0.0, 1"
 LibAwsCompression = "=1.0.0"
 LibAwsHTTP = "=1.0.0"
 LibAwsIO = "=1.0.0"
