CompatHelper: bump compat for LibAwsCompression to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Aqua = "0.7"
 CEnum = "0.5"
 LibAwsCal = "=1.0.0"
 LibAwsCommon = "=1.0.0"
-LibAwsCompression = "=1.0.0"
+LibAwsCompression = "=1.0.0, 1"
 LibAwsHTTP = "=1.0.0"
 LibAwsIO = "=1.0.0"
 LibAwsSdkutils = "=1.0.0"
