--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ aws_c_auth_jll = "2b3700d1-4306-52e2-a478-c162f0c514be"
 [compat]
 Aqua = "0.7"
 CEnum = "0.5"
-LibAwsCal = "=1.0.0"
+LibAwsCal = "=1.0.0, 1"
 LibAwsCommon = "=1.0.0"
 LibAwsCompression = "=1.0.0"
 LibAwsHTTP = "=1.0.0"
