--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ LibAwsCommon = "=1.0.0"
 LibAwsCompression = "=1.0.0"
 LibAwsHTTP = "=1.0.0"
 LibAwsIO = "=1.0.0"
-LibAwsSdkutils = "=1.0.0"
+LibAwsSdkutils = "=1.0.0, 1"
 aws_c_auth_jll = "=0.7.18"
 julia = "1.6"
 
