--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ CEnum = "0.5"
 LibAwsCal = "=1.0.0"
 LibAwsCommon = "=1.0.0"
 LibAwsCompression = "=1.0.0"
-LibAwsHTTP = "=1.0.0"
+LibAwsHTTP = "=1.0.0, 1"
 LibAwsIO = "=1.0.0"
 LibAwsSdkutils = "=1.0.0"
 aws_c_auth_jll = "=0.7.18"
