--- a/Project.toml
+++ b/Project.toml
@@ -15,12 +15,12 @@ aws_c_auth_jll = "2b3700d1-4306-52e2-a478-c162f0c514be"
 [compat]
 Aqua = "0.7"
 CEnum = "0.5"
-LibAwsCal = "=1.1.0"
-LibAwsCommon = "=1.2.0"
-LibAwsCompression = "=1.1.0"
-LibAwsHTTP = "=1.1.0"
-LibAwsIO = "=1.1.0"
-LibAwsSdkutils = "=1.1.0"
+LibAwsCal = "1.1.0"
+LibAwsCommon = "1.2.0"
+LibAwsCompression = "1.1.0"
+LibAwsHTTP = "1.2.0"
+LibAwsIO = "1.1.0"
+LibAwsSdkutils = "1.1.0"
 aws_c_auth_jll = "=0.7.22"
 julia = "1.6"
 
