--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ LibAwsCompression = "1.1.0"
 LibAwsHTTP = "1.2.0"
 LibAwsIO = "1.1.0"
 LibAwsSdkutils = "1.1.0"
+Test = "1.11"
 aws_c_auth_jll = "=0.9.1"
 julia = "1.6"
 
